[package]
name = "colorname"
version = "0.1.0"
authors = ["jannis"]
edition = "2018"

[dependencies]
clap = "2.33.0"
strsim = "0.9.2"
crossterm_style = "0.3.3"
rocket = "0.4.2"
serde = { version = "1.0.94", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates"]
